--- a/Views/Home/AddArtist.cshtml
+++ b/Views/Home/AddArtist.cshtml
@@ -5,8 +5,10 @@
 <h2>Add Artist to CD:</h2>
 @* <h3>@Model.GetCdTitle()</h3> *@
 <form action='/cd/all-artists' method="post">
+  @* <input id='cd-id' name='cd-id' type='hidden' value='@Model["category"].GetId()'> *@
+
   <label for="new-artist">Artist Name:</label>
   <input id="new-artist" name="new-artist" type="text" class="form-control">
 
 <button type="submit" class="btn btn-default">Add Artist</button>
-</form> 
+</form>
