--- a/Views/Home/AllArtists.cshtml
+++ b/Views/Home/AllArtists.cshtml
@@ -5,7 +5,7 @@
 <ul>
     @foreach (var artist in Model)
   {
-  <li>@artist.GetArtistName()</li>
+  <li><a href="/artist/@artist.GetId()">@artist.GetArtistName()</a></li>
   }
 </ul>
 <a href="/cd/add"><button>Add another CD</button></a>
